support clean leak alarm; delete unused code

--- a/prj.conf
+++ b/prj.conf
@@ -64,11 +64,12 @@ CONFIG_STREAM_FLASH=y
 CONFIG_LTE_LINK_CONTROL=y
 CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 CONFIG_LTE_NETWORK_MODE_LTE_M_GPS=y
+# CONFIG_LTE_NETWORK_USE_FALLBACK=n
 
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 # enable modem trace
-# CONFIG_NRF_MODEM_LIB_TRACE=y
+CONFIG_NRF_MODEM_LIB_TRACE=y
 
 # Modem info
 CONFIG_MODEM_INFO=y
@@ -135,9 +136,9 @@ CONFIG_LWM2M_SECONDS_TO_UPDATE_EARLY=600
 
 # Configure PSM mode
 # Request periodic TAU of 3600 seconds (60 minutes)
-# CONFIG_LTE_PSM_REQ_RPTAU="00000110"
+CONFIG_LTE_PSM_REQ_RPTAU="00000110"
 # Request periodic TAU of (24 hours)
-CONFIG_LTE_PSM_REQ_RPTAU="00111000"
+# CONFIG_LTE_PSM_REQ_RPTAU="00111000"
 
 # Set Requested Active Time (RAT) to 30 seconds. Preferably a little bit longer than the
 # configured LWM2M_QUEUE_MODE_UPTIME. Due to NAT/firewall UDP connections are usually
