support RAI, but not stable, need more test

--- a/prj.conf
+++ b/prj.conf
@@ -69,7 +69,9 @@ CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 # enable modem trace
-CONFIG_NRF_MODEM_LIB_TRACE=n
+CONFIG_NRF_MODEM_LIB_TRACE=y
+# CONFIG_AT_HOST_LIBRARY=y
+# CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # Modem info
 CONFIG_MODEM_INFO=y
@@ -168,3 +170,6 @@ CONFIG_LTE_LC_TAU_PRE_WARNING_NOTIFICATIONS=y
 # Optimize powersaving by using tickless mode in LwM2M engine
 CONFIG_NET_SOCKETPAIR=y
 CONFIG_LWM2M_TICKLESS=y
+
+## RAI
+CONFIG_LTE_RAI_REQ_VALUE="4"
