--- a/prj.conf
+++ b/prj.conf
@@ -69,7 +69,7 @@ CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 # Modem library
 CONFIG_NRF_MODEM_LIB=y
 # enable modem trace
-CONFIG_NRF_MODEM_LIB_TRACE=y
+# CONFIG_NRF_MODEM_LIB_TRACE=y
 # CONFIG_AT_HOST_LIBRARY=y
 # CONFIG_UART_INTERRUPT_DRIVEN=y
 
@@ -126,7 +126,7 @@ CONFIG_LWM2M_RD_CLIENT_SUSPEND_SOCKET_AT_IDLE=y
 # Sets the duration that the lwm2m engine will be polling for data after transmission before
 # the socket is closed.
 # Adjust so that we can detach from network in 30 seconds
-CONFIG_LWM2M_QUEUE_MODE_UPTIME=30
+CONFIG_LWM2M_QUEUE_MODE_UPTIME=10
 
 # Set lifetime of 24 hours
 CONFIG_LWM2M_ENGINE_DEFAULT_LIFETIME=86400
@@ -172,4 +172,7 @@ CONFIG_NET_SOCKETPAIR=y
 CONFIG_LWM2M_TICKLESS=y
 
 ## RAI
-CONFIG_LTE_RAI_REQ_VALUE="4"
+CONFIG_LWM2M_CLIENT_UTILS_RAI=y
+
+
+CONFIG_LWM2M_RW_OMA_TLV_SUPPORT=y
