--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "nrf-connect.topdir": "${nrf-connect.sdk:2.3.0}",
-  "nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.3.0}",
+  "nrf-connect.topdir": "c:\\NCS_SDK\\v2.4.0",
+  "nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.4.0}",
   "nrf-connect.applications": [
     "."
   ],
