--- a/prj.conf
+++ b/prj.conf
@@ -70,8 +70,7 @@ CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 CONFIG_NRF_MODEM_LIB=y
 # enable modem trace
 # CONFIG_NRF_MODEM_LIB_TRACE=y
-# CONFIG_AT_HOST_LIBRARY=y
-# CONFIG_UART_INTERRUPT_DRIVEN=y
+
 
 # Modem info
 CONFIG_MODEM_INFO=y
@@ -93,7 +92,8 @@ CONFIG_DOWNLOAD_CLIENT_HTTP_FRAG_SIZE_1024=y
 CONFIG_FOTA_DOWNLOAD=y
 
 # Application version
-CONFIG_MCUBOOT_IMAGE_VERSION="1.0.3"
+# CONFIG_MCUBOOT_IMAGE_VERSION="1.0.0"
+CONFIG_MCUBOOT_IMGTOOL_SIGN_VERSION="1.0.0"
 
 # Set LwM2M Server IP address here
 CONFIG_LWM2M_CLIENT_UTILS_SERVER="coaps://eu.iot.avsystem.cloud:5684"
